# project_termo_read

./: CMakeLists.txt  Readme.txt  cpu_temperature.cpp  cpu_temperature.h  lcd_i2c.cpp  lcd_i2c.h  main.cpp  max6675.cpp  max6675.h
